# fastmcp-ollama

./: .gitmodules  README.md  delegation_plan.json  pyproject.toml
ai_assistance/doc/: 00-Prompt-Project-Kickoff  00-Prompt-Project-Kickoff.md  QA-Checklist.md  mcp_settings.json  systemPrompt.json  systemPrompt.txt
project-tracking/: progress.md  project_plan.md  tasks.md
src/fastmcp_ollama/: __init__.py  __main__.py  config.py  server.py  utils.py
src/fastmcp_ollama/tools/: __init__.py  chat.py  models.py
tests/: __init__.py  test_config.py
